Added Password encryption secret change section